2008-09-10  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 550442 – gdk.c:19188: error: ‘GDK_TYPE_APP_LAUNCH_CONTEXT’
	undeclared (first use in this function)

	* gtk/gdk.override: Include <gdk/gdk.h> itself.

2008-09-09  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 551505 – set_parent_window(None) should work

	* gtk/gtk-base.defs (gtk.Widget.set_parent_window): Accept None
	too.

2008-09-09  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 539475 – gtk.gdk.threads_(enter|leave) promote dead-lock-prone
	synchronization

	* gtk/__init__.py (gdk.lock): New context manager.

2008-09-08  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 550754 – need to import GIO types from PyGObject package

	* configure.ac: Determine if `gio-types.defs' is installed as part
	of PyGObject.

	* gtk/Makefile.am: Use it to register GIO types if installed.

	* gtk/gdk.override: Make gio.AppLaunchContext import conditional.
	Add conditional import of gio.Icon.

	* gtk/gtk.override: Make gio.MountOperation import conditional.
	Add conditional imports of gio.File and gio.Icon.

2008-09-02  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gtk-2.14.defs: comment out for a while gtk_selection_data_get_data
	waiting to fix a problem in codegen.

2008-09-01  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.ac: require GTK+ 2.13.8 for pygtk 2.14

	* gtk/gtk-2.14.defs: update with latest API changes in GTK+

2008-09-01  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.ac: require pygobject 2.15.4 for pygtk 2.14

2008-09-01  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 309554 – gtk.Widget.list_accel_closures not wrapped

	* gtk/gtkwidget.override:
	* tests/Makefile.am:
	* tests/test_accel_closures.py: Wrap gtk_widget_list_accel_closures
	patch from Gustavo Carneiro.

2008-08-31  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/pygtktreemodel.c: Remove compiler warnings.

2008-08-28  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 541476 – Update pango examples
