@@ -1,3 +1,12 @@
+2008-09-11  Paul Pogonyshev  <pogonyshev@gmx.net>
+
+	Bug 481715 – Need way to assign to a GtkTextIter
+
+	* gtk/gtktextview.override (_wrap_gtk_text_iter_assign): New
+	function (based on patch by Owen Taylor).
+
+	* tests/test_textview.py (TextIterTest): New test.
+
 2008-09-10  Paul Pogonyshev  <pogonyshev@gmx.net>
 
 	Bug 550442 – gdk.c:19188: error: ‘GDK_TYPE_APP_LAUNCH_CONTEXT’
